--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous" />
+    <meta name="description" content="Portfolio website for Sushant Thakur" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Sushant's Webpage</title>
+    <link
+      rel="shortcut icon"
+      href="https://ia601703.us.archive.org/6/items/twitter-default-pfp/e.png"
+      type="image/x-icon" />
+    <title>Sushant Thakur</title>
   </head>
   <body>
     <div id="root"></div>
